--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-sqlalchemy~=2.0.39
-python-dotenv~=1.1.0
-typer~=0.16.0
-alembic~=1.15.2
+sqlalchemy
+python-dotenv
+typer
+alembic
 psycopg2
-
-rich~=14.1.0
-typing_extensions~=4.12.2
+rich
+typing_extensions
